# gpn

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
configs/: gpn1_alignment_ablation.yaml  gpn1_architecture_only.yaml  gpn1_default.yaml  gpn1_empowerment_ablation.yaml  gpn1_grounded_witness.yaml  gpn1_grounding_ablation.yaml  gpn1_meta_learning.yaml  gpn1_no_alignment.yaml  gpn1_v3_no_gating.yaml  gpn2_twodigit.yaml
docs/: design-v1.md  domain-generalization-scoping.md  gan-vs-gpn-curriculum-ablation.md  gpn-phases-1-2-results.md  gpn2-curriculum-ablation-results.md  gpn2-multidigit-spec.md  hybrid-adversarial-pedagogical-results.md  judgment-datasets-survey.md  judgment-experiment-design.md  mastery-learning-paper-outline.md  paper-draft-v3.md  paper-outline-v3-vallier-framing.md  session-dec11-12-findings.md  tony-notes.md
paper/: .gitignore  Makefile  appendix_provenance.tex  draft-main-20251212-215611.aux  draft-main-20251212-215611.blg  draft-main-20251212-215611.fdb_latexmk  draft-main-20251212-215611.fls  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
results/: checkpoint_generation_test_results.md  fashion_mnist_experiment_status.md  fashion_mnist_topology_results.json  fashion_relational_results.json  feature_metrics.json  phase1_only_ablation_hypothesis.md  phase1_only_ablation_results.md  phase1_only_topology_output.txt  preregistration_extended_seeds.md  session_summary_2025-12-08.md  statistical_rigor.json  temporal_detection_auc.json  topology_analysis_summary.md  training_dynamics_analysis.md  training_dynamics_predictions.md  training_dynamics_results.json
scripts/: aggregate_temporal_experiments.py  analyze_boundary_topology.py  analyze_fashion_mnist_topology.py  analyze_per_digit_dimensionality.py  analyze_training_dynamics.py  compute_feature_metrics.py  compute_persistent_homology.py  compute_statistical_rigor.py  generate_architecture_figure.py  generate_fig4_fixed.py  generate_paper_figures.py  run_checkpoint1.py  (+36 more)
(+397 files in other folders)
