[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpn"
version = "0.1.0"
description = "Generative Pedagogical Networks - MNIST Proof of Concept"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tony Mason"}
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "tensorboard",
    "pyyaml",
    "tensorflow>=2.20.0",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
gpn-train = "src.cli.train:main"
gpn-evaluate = "src.cli.evaluate:main"
gpn-visualize = "src.cli.visualize:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
